--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,11 +25,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
-        <TextView
+        <Button
             android:id="@+id/loginSignUpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="24dp"
+            android:minHeight="0dp"
             android:text="sign up"
             android:textSize="20sp"
             android:textColor="@color/white"
