--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
-        <Button
+        <TextView
             android:id="@+id/loginSignUpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
                 android:background="@drawable/background_radius_26_white"
                 android:elevation="5dp"
                 app:layout_constraintTop_toBottomOf="@id/loginWelcomeText"
-                app:layout_constraintBottom_toTopOf="@id/loginFindPasswordButton">
+                app:layout_constraintBottom_toBottomOf="parent">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -153,17 +153,6 @@
                 app:layout_constraintBottom_toBottomOf="@id/loginBox"
                 app:layout_constraintLeft_toLeftOf="@id/loginBox" />
 
-            <TextView
-                android:id="@+id/loginFindPasswordButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="find password"
-                android:textSize="15sp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/robotobold"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
