--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="30dp"
-            android:text="Java"
+            android:text="App:ple Pi"
             android:textSize="30sp"
             android:textColor="@color/primary"
             android:fontFamily="@font/robotobold"
