--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="welcome to java"
+            android:text="welcome to App:ple Pi"
             android:textSize="20sp"
             android:textColor="#bebebe"
             app:layout_constraintTop_toBottomOf="@id/welcomeHello"
